[workspace]

members = ["nats", "async-nats", "nats-server"]

[patch.crates-io]
# webpki = { package = "rustls-webpki", git = "https://github.com/wasix-org/webpki.git", branch = "v0.100.0" }
webpki = { package = "rustls-webpki", git = "https://github.com/wasix-org/webpki.git", branch = "v0.101.0" }
ring = { git = "https://github.com/wasix-org/ring.git", branch = "wasix" }
rustls = { git = "https://github.com/wasix-org/rustls.git", branch = "v0.21.5" }
tokio = { git = "https://github.com/wasix-org/tokio.git", version = "=1.24.2", branch = "epoll" }
tokio-rustls = { git = "https://github.com/wasix-org/tokio-rustls.git", version = "=0.24.1" }
