[workspace]
resolver = "2"

members = ["nats", "async-nats", "nats-server"]

[patch.crates-io]
socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.4.9" }
libc = { git = "https://github.com/wasix-org/libc.git", branch = "v0.2.147" }
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "epoll" }
rustls = { git = "https://github.com/wasix-org/rustls.git", branch = "v0.21.5" }
