[package]
name = "nats-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = { version = "1.7.1", default-features = false, features = [
    "std",
    "unicode-perl",
] }
url = "2"
json = "0.12"
nuid = "0.3.2"
rand = "0.8"
tokio-retry = "0.3.0"

[dev-dependencies]
tokio = { git = "https://github.com/wasix-org/tokio.git", version = "=1.24.2", branch = "epoll", features = [
    "full",
] }
async-nats = "0.29"
futures = "0.3"
